[gd_scene load_steps=15 format=3 uid="uid://f4ikflxbqnmx"]

[ext_resource type="Script" path="res://scenes/device/settings_phone.gd" id="1_ced6i"]
[ext_resource type="Texture2D" uid="uid://w3nfv6j12y4n" path="res://assets/images/device/phone_settings_true_bg.png" id="2_d3c8c"]
[ext_resource type="Theme" uid="uid://s47xnf1e5hrf" path="res://scenes/components/wifi_button.tres" id="3_mjkfs"]
[ext_resource type="FontFile" uid="uid://ciy0sgm7tekc3" path="res://assets/font/cg pixel 4x5.fnt" id="4_rfiyv"]
[ext_resource type="LabelSettings" uid="uid://diwe4t6j60tts" path="res://scenes/components/social_media.tres" id="5_0b1pm"]
[ext_resource type="LabelSettings" uid="uid://nk5nj83e5ai4" path="res://scenes/components/settings_phone.tres" id="5_y3mvf"]
[ext_resource type="Theme" uid="uid://cms308t78a7rj" path="res://scenes/components/social_media_permissions_buttons.tres" id="6_ktjui"]
[ext_resource type="Texture2D" uid="uid://dtr61c0kwi83t" path="res://assets/images/device/wifi_icon.png" id="7_j0hlb"]
[ext_resource type="Texture2D" uid="uid://ds1qvwl7vloao" path="res://assets/images/device/wifi_haspass_icon.png" id="8_3qpag"]
[ext_resource type="PackedScene" uid="uid://vkarcqx1hknc" path="res://scenes/device/settings/wifi_button.tscn" id="8_ce46u"]
[ext_resource type="StyleBox" uid="uid://cf0dwxbaffuvq" path="res://scenes/components/wifi_pass_panel.tres" id="10_cev7i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_naxbi"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlmo0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_saxvn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ced6i")
metadata/_edit_lock_ = true

[node name="SettingsBackground" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = -10.0
offset_right = 69.0
offset_bottom = 134.0
mouse_filter = 2
texture = ExtResource("2_d3c8c")
expand_mode = 3

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 12.0
offset_bottom = 12.0
theme = ExtResource("3_mjkfs")
theme_override_fonts/font = ExtResource("4_rfiyv")
theme_override_font_sizes/font_size = 5
text = "<"

[node name="SettingsName" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 4.0
offset_right = 49.0
offset_bottom = 9.0
text = "Settings"
label_settings = ExtResource("5_y3mvf")

[node name="SettingsList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 15.0
offset_right = 60.0
offset_bottom = 70.0

[node name="WIFIHorz" type="HBoxContainer" parent="SettingsList"]
layout_mode = 2

[node name="WIFILabel" type="Label" parent="SettingsList/WIFIHorz"]
layout_mode = 2
text = "WiFI"
label_settings = ExtResource("5_y3mvf")

[node name="WIFIButton" type="Button" parent="SettingsList/WIFIHorz"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_mjkfs")
text = "NONE"
alignment = 2

[node name="LocationHorz" type="HBoxContainer" parent="SettingsList"]
layout_mode = 2

[node name="LocationLabel" type="Label" parent="SettingsList/LocationHorz"]
layout_mode = 2
text = "LOCATION"
label_settings = ExtResource("5_y3mvf")

[node name="LocationButton" type="CheckButton" parent="SettingsList/LocationHorz"]
layout_mode = 2
theme = ExtResource("6_ktjui")

[node name="GameSettingsDiv" type="HSeparator" parent="SettingsList"]
layout_mode = 2

[node name="FScreenHorz" type="HBoxContainer" parent="SettingsList"]
layout_mode = 2

[node name="FullScreenLabel" type="Label" parent="SettingsList/FScreenHorz"]
layout_mode = 2
size_flags_horizontal = 0
text = "F.screen"
label_settings = ExtResource("5_y3mvf")

[node name="FullScreenOption" type="CheckButton" parent="SettingsList/FScreenHorz"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_ktjui")

[node name="MasterVolumeLabel" type="Label" parent="SettingsList"]
layout_mode = 2
size_flags_horizontal = 0
text = "M. Volume"
label_settings = ExtResource("5_y3mvf")

[node name="VolumeSlider" type="HSlider" parent="SettingsList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("6_ktjui")
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicLabel" type="Label" parent="SettingsList"]
layout_mode = 2
size_flags_horizontal = 0
text = "Music"
label_settings = ExtResource("5_y3mvf")

[node name="MusicSlider" type="HSlider" parent="SettingsList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("6_ktjui")
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXLabel" type="Label" parent="SettingsList"]
layout_mode = 2
size_flags_horizontal = 0
text = "SFX"
label_settings = ExtResource("5_y3mvf")

[node name="SFXSlider" type="HSlider" parent="SettingsList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("6_ktjui")
max_value = 1.0
step = 0.01
value = 1.0

[node name="PanelWarningHack" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="LocationWarningPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 4.0
offset_top = 41.0
offset_right = 62.0
offset_bottom = 81.0
theme_override_styles/panel = SubResource("StyleBoxFlat_naxbi")
metadata/_edit_lock_ = true

[node name="LocWarn" type="Label" parent="LocationWarningPanel"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 55.0
offset_bottom = 20.0
text = "Do you want
to disable?"
label_settings = ExtResource("5_0b1pm")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="ButtonOptions" type="HBoxContainer" parent="LocationWarningPanel"]
layout_mode = 0
offset_left = 3.0
offset_top = 26.0
offset_right = 55.0
offset_bottom = 31.0
alignment = 1
metadata/_edit_lock_ = true

[node name="LocYesButton" type="Button" parent="LocationWarningPanel/ButtonOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme = ExtResource("6_ktjui")
text = "Yes"

[node name="LocNoButton" type="Button" parent="LocationWarningPanel/ButtonOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme = ExtResource("6_ktjui")
text = "No"

[node name="WIFIPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 12.0
offset_right = 62.0
offset_bottom = 120.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nlmo0")

[node name="WIFISettingName" type="Label" parent="WIFIPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 18.0
offset_bottom = 9.0
text = "WIFI"
label_settings = ExtResource("5_0b1pm")

[node name="HSeparator" type="HSeparator" parent="WIFIPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 11.0
offset_right = 52.0
offset_bottom = 15.0

[node name="WIFIList" type="VBoxContainer" parent="WIFIPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.0
offset_top = 18.0
offset_right = 53.0
offset_bottom = 58.0

[node name="Sex" parent="WIFIPanel/WIFIList" instance=ExtResource("8_ce46u")]
layout_mode = 2
text = "Sex"
icon = ExtResource("8_3qpag")
wifi_name = "Sex"
wifi_password = "sex"

[node name="gay" parent="WIFIPanel/WIFIList" instance=ExtResource("8_ce46u")]
layout_mode = 2
text = "gay"
icon = ExtResource("7_j0hlb")
wifi_name = "gay"

[node name="WIFIPassPanel" type="Panel" parent="WIFIPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 6.0
offset_top = 26.0
offset_right = 51.0
offset_bottom = 66.0
theme_override_styles/panel = SubResource("StyleBoxFlat_saxvn")

[node name="PassLabel" type="Label" parent="WIFIPanel/WIFIPassPanel"]
layout_mode = 0
offset_left = 1.0
offset_top = 8.0
offset_right = 45.0
offset_bottom = 13.0
text = "PASS?"
label_settings = ExtResource("5_0b1pm")
horizontal_alignment = 1

[node name="PasswordKey" type="LineEdit" parent="WIFIPanel/WIFIPassPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 18.0
offset_right = 43.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("4_rfiyv")
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = ExtResource("10_cev7i")
theme_override_styles/focus = ExtResource("10_cev7i")
secret = true
secret_character = "*"

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="SettingsList/WIFIHorz/WIFIButton" to="." method="_on_wifi_button_pressed"]
[connection signal="toggled" from="SettingsList/LocationHorz/LocationButton" to="." method="_on_location_button_toggled"]
[connection signal="toggled" from="SettingsList/FScreenHorz/FullScreenOption" to="." method="_on_full_screen_option_toggled"]
[connection signal="value_changed" from="SettingsList/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="SettingsList/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SettingsList/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="gui_input" from="PanelWarningHack" to="." method="_on_panel_warning_hack_gui_input"]
[connection signal="pressed" from="LocationWarningPanel/ButtonOptions/LocYesButton" to="." method="_on_loc_yes_button_pressed"]
[connection signal="pressed" from="LocationWarningPanel/ButtonOptions/LocNoButton" to="." method="_on_loc_no_button_pressed"]
[connection signal="text_submitted" from="WIFIPanel/WIFIPassPanel/PasswordKey" to="." method="_on_password_key_text_submitted"]
